{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 240,
  "lineage": "8c30f9ea-46ae-a235-c39e-2b61c79cdf81",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:940663608218:internet-gateway/igw-0414030b75a5c8a78",
            "id": "igw-0414030b75a5c8a78",
            "owner_id": "940663608218",
            "tags": {
              "Name": "dinggo-igw"
            },
            "tags_all": {
              "Name": "dinggo-igw"
            },
            "vpc_id": "vpc-07e32aa86a31cd9c9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:940663608218:route-table/rtb-0fd51b08ce7af7a32",
            "id": "rtb-0fd51b08ce7af7a32",
            "owner_id": "940663608218",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0414030b75a5c8a78",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dinggo-public-rt"
            },
            "tags_all": {
              "Name": "dinggo-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07e32aa86a31cd9c9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07e48ae13738e5012",
            "route_table_id": "rtb-0fd51b08ce7af7a32",
            "subnet_id": "subnet-097471b404c9286a5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cc941a7ff457f666",
            "route_table_id": "rtb-0fd51b08ce7af7a32",
            "subnet_id": "subnet-09a4de85ebf0e04bb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:940663608218:security-group/sg-090e428d978759ec5",
            "description": "Allow HTTP and SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-090e428d978759ec5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dinggo-ecs-sg",
            "name_prefix": "",
            "owner_id": "940663608218",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dinggo-ecs-sg"
            },
            "tags_all": {
              "Name": "dinggo-ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07e32aa86a31cd9c9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:940663608218:security-group/sg-05d29b5c7605714a7",
            "description": "Allow NFS inbound traffic from ECS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05d29b5c7605714a7",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "NFS from ECS",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-090e428d978759ec5"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "dinggo-efs-sg",
            "name_prefix": "",
            "owner_id": "940663608218",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dinggo-efs-sg"
            },
            "tags_all": {
              "Name": "dinggo-efs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07e32aa86a31cd9c9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ecs_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:940663608218:security-group/sg-01826abbe379606f5",
            "description": "Allow PostgreSQL inbound traffic from ECS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01826abbe379606f5",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "PostgreSQL from ECS",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-090e428d978759ec5"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "dinggo-rds-sg",
            "name_prefix": "",
            "owner_id": "940663608218",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dinggo-rds-sg"
            },
            "tags_all": {
              "Name": "dinggo-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07e32aa86a31cd9c9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ecs_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:940663608218:subnet/subnet-097471b404c9286a5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-097471b404c9286a5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "940663608218",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dinggo-public-1"
            },
            "tags_all": {
              "Name": "dinggo-public-1"
            },
            "vpc_id": "vpc-07e32aa86a31cd9c9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:940663608218:subnet/subnet-09a4de85ebf0e04bb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09a4de85ebf0e04bb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "940663608218",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dinggo-public-2"
            },
            "tags_all": {
              "Name": "dinggo-public-2"
            },
            "vpc_id": "vpc-07e32aa86a31cd9c9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:940663608218:vpc/vpc-07e32aa86a31cd9c9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00e7eb88fd8c0b00d",
            "default_route_table_id": "rtb-0e356552d8c6b0f92",
            "default_security_group_id": "sg-0a9ecf0e8f99c9837",
            "dhcp_options_id": "dopt-0f36dd5ceec592ede",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07e32aa86a31cd9c9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e356552d8c6b0f92",
            "owner_id": "940663608218",
            "tags": {
              "Name": "dinggo-vpc"
            },
            "tags_all": {
              "Name": "dinggo-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}